refactor: add fixed min width for panels

--- a/packages/ui-patterns/src/patterns/settingsPage/settingsPage.html
+++ b/packages/ui-patterns/src/patterns/settingsPage/settingsPage.html
@@ -22,7 +22,7 @@
     </ino-nav-item>
   </ino-list>
 
-  <main slot="app" class="bg-white px-20 py-10 h-screen">
+  <main slot="app" class="bg-white px-20 py-10 h-screen xl:min-w-[1125px]">
     <ino-tab-bar>
       <ino-tab
         label="Account"
