feat: add footer & hero pattern to landingpage

--- a/packages/ui-patterns/src/patterns/footer/footer.html
+++ b/packages/ui-patterns/src/patterns/footer/footer.html
@@ -125,7 +125,12 @@
       <div
         class="col-span-3 border-t mt-6 flex flex-wrap sm:justify-start items-center g"
       >
-        <ino-img id="logo" height="30" width="30" class="mr-1"></ino-img>
+        <ino-img
+          id="attributions"
+          height="30"
+          width="30"
+          class="mr-1"
+        ></ino-img>
         <a
           class="tailwind label-s"
           target="_blank"
