--- a/packages/ui-patterns/src/patterns/hero/hero.html
+++ b/packages/ui-patterns/src/patterns/hero/hero.html
@@ -2,8 +2,8 @@
   <div class="flex flex-col">
     <div class="text-left">
       <div class="inline-flex items-center">
-        <ino-img id="logo" height="30" width="30" class="h-12"></ino-img>
-        <p class="title-s">inovex Elements</p>
+        <ino-img id="heroLogo" height="30" width="30" class="h-12"></ino-img>
+        <p class="title-s !m-0">inovex Elements</p>
       </div>
       <h1 class="header-d1 mt-6 text-inovex-primary">
         the
